<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="title">OpenSpritz Plugin</string>
	<string name="initializing">Initializing&#8230;</string>
	<string name="failure">Initialization failed, sorry</string>
	<string name="ospritz_menu_item">Open Spritz</string>
	<string name="initialization_error">Could not get book data from FBReader.</string>
	<string name="language_is_not_set">Book language is not set. Trying to read book in %0.</string>
    <string name="tv_textSize_text">Text Size:</string>
    <string name="tv_wpm_text">WPM:</string>
    <string name="pref_list_theme_title">Theme</string>
    <string name="pref_category_theme_title">Themes Settings</string>
    <string name="pref_list_theme_dialogTitle">Choose a Theme</string>
    <string name="prev_list_theme_defaultValue">DarkTheme</string>
    <string name="pref_category_wpm_title">Speed Settings</string>
    <string name="pref_category_textSize_title">Text Size Settings</string>
    <string name="pref_holoColor_textColor_dialogTitle">Text Color</string>
    <string name="pref_holoColor_backgroundColor_dialogTitle">Background Color</string>
    <string name="pref_checkbox_textColor_title">Custom Text Color</string>
    <string name="pref_checkbox_backgroundColor_title">Custom Background Color</string>
    <string name="pref_screen_customColors_title">Custom Colors</string>
    <string name="pref_text_minWPM_title">Min WPM</string>
    <string name="pref_text_maxWPM">Max WPM</string>
    <string name="pref_text_minTextSize_title">Min Text Size</string>
    <string name="pref_text_maxTextSize_title">Max Text Size</string>
    <string name="pref_screen_sliderBars_title">Slider Preferences</string>
    <string name="pref_screen_speedSettings_title">Speed Settings</string>
    <string name="pref_category_longWordDelay">Long Word Delay</string>
    <string name="pref_text_longWordDelayAdd_title">Long Word Delay Multiplier</string>
    <string name="pref_text_longWordCharacters_title">Number of Characters</string>
    <string name="pref_checkbox_longWordDelay_title">Enable Additional Delay for Long Words</string>
    <string name="pref_category_delayByLetter">Delay Per Letter</string>
    <string name="pref_checkbox_delayByLetter_title">Enable Delay Per Letter (wpm based on 4.5 letter word)</string>
    <string name="pref_text_delayByLetterMaxMultiplier_title">Maximum Letter Delay Multiplier (lower means faster long words)</string>
    <string name="pref_text_delayByLetterMinMultiplier_title">Minimum Letter Delay Multiplier (lower means faster short words)</string>
    <string name="pref_category_punctuationDelay_title">Punctuation Delay</string>
    <string name="pref_checkbox_punctuationDelay_title">Enable Punctuation Delay</string>
    <string name="pref_text_punctuationDelayCharacters_title">Punctuation Characters</string>
    <string name="pref_text_punctuationDelayAdd_title">Additional Punctuation Delay</string>
    <string name="pref_category_paragraphDelay_title">Paragraph Delay</string>
    <string name="pref_checkbox_paragraphDelay_title">Enable Paragraph Delay</string>
    <string name="pref_text_paragraphDelayAdd_title">Additional Paragraph Delay</string>
    <string name="imageView_colorPreviewImage_contentDescription">Color Preview</string>
    <string name="ImageButton_previousParagraph_contentDescription">Previous Paragraph</string>
    <string name="ImageButton_close_contentDescription">Stop</string>
    <string name="ImageButton_settings_contentDescription">Settings</string>
    <string name="ImageButton_nextParagraph_contentDescription">Next Paragraph</string>
    <string name="ImageButton_play_contentDescription">Play</string>
    <string name="ImageButton_pause_contentDescription">Pause</string>
    <string name="pref_checkbox_enableWpmBar_title">Enable WPM Bar</string>
    <string name="pref_checkbox_enableTextSizeBar_title">Enable Text Size Bar</string>
    <string name="tv_tv_textSizeExplanation_text">After configuring text size, hide this slider bar in settings, and the window width will match the width of the spritz text.</string>
    <string name="pref_category_windowPosition_title">Window Position</string>
    <string name="pref_list_windowPosition_title">Window Position</string>
    <string name="pref_list_windowPositionHorizontal_title">Horizontal Window Position</string>
    <string name="pref_list_windowPositionHorizontal_dialogTitle">Choose a Horizontal Window Position</string>
    <string name="pref_list_windowPositionVertical_title">Vertical Window Position</string>
    <string name="pref_list_windowPositionVertical_dialogTitle">Choose a Virtical Window Position</string>
    <string name="pref_category_controls_title">Controls</string>
    <string name="pref_category_advancedSettings">Advanced Settings</string>
    <string name="pref_checkbox_enableBackgroundDimming_title">Enable Dimming Background</string>
</resources>
