<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pref_category_theme_title">
        <ListPreference
            android:key="pref_list_theme"
            android:title="@string/pref_list_theme_title"
            android:dialogTitle="@string/pref_list_theme_dialogTitle"
            android:entries="@array/pref_list_theme_entries"
            android:entryValues="@array/pref_list_theme_entryValues"
            android:defaultValue="@string/prev_list_theme_defaultValue"
            android:summary="%s" />
        <PreferenceScreen
            android:title="@string/pref_category_customColors"
            android:persistent="false">
            <CheckBoxPreference
                android:key="pref_checkbox_textColor"
                android:title="@string/pref_checkbox_textColor_title"
                android:defaultValue="false" />
            <net.usikkert.kouchat.android.component.HoloColorPickerPreference
                android:key="pref_holoColor_textColor"
                android:title="@string/pref_holoColor_textColor_dialogTitle"
                android:defaultValue="-1"
                android:dialogTitle="@string/pref_holoColor_textColor_dialogTitle"
                android:dialogIcon="@android:drawable/ic_dialog_info"
                android:dependency="pref_checkbox_textColor"/>
            <CheckBoxPreference
                android:key="pref_checkbox_backgroundColor"
                android:title="@string/pref_checkbox_backgroundColor_title"
                android:defaultValue="false" />
            <net.usikkert.kouchat.android.component.HoloColorPickerPreference
                android:key="pref_holoColor_backgroundColor"
                android:title="@string/pref_holoColor_backgroundColor_dialogTitle"
                android:defaultValue="-16777216"
                android:dialogTitle="@string/pref_holoColor_backgroundColor_dialogTitle"
                android:dialogIcon="@android:drawable/ic_dialog_info"
                android:dependency="pref_checkbox_backgroundColor"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_wpm_title">
        <EditTextPreference
            android:key="pref_text_minWPM"
            android:title="@string/pref_text_minWPM_title"
            android:defaultValue="100"
            android:inputType="number" />
        <EditTextPreference
            android:key="pref_text_maxWPM"
            android:title="@string/pref_text_maxWPM"
            android:defaultValue="1000"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_textSize_title">
            <EditTextPreference
                android:key="pref_text_minTextSize"
                android:title="@string/pref_text_minTextSize_title"
                android:defaultValue="4"
                android:inputType="number" />
            <EditTextPreference
                android:key="pref_text_maxTextSize"
                android:title="@string/pref_text_maxTextSize_title"
                android:defaultValue="50"
                android:inputType="number"/>

        </PreferenceCategory>
<!--    <PreferenceScreen
        android:title="@string/pref_screen_advanced_timings_title"
        android:key="screen_advanced_timings">
        <EditTextPreference
            android:key="pause_length"
            android:title="Pause Length"
            android:defaultValue="50"
            android:inputType="numberDecimal"/>
    </PreferenceScreen> !-->

</PreferenceScreen>